# strff

./: .gitlab-ci.yml  CMakeLists.txt  README.md  fpm.toml
doc/: front-matter.md
src/: CMakeLists.txt  strff.f90
subprojects/: CMakeLists.txt
test/: add_hanging_indentation_test.f90  format_hanging_indented_test.f90  hanging_indent_test.f90  hangingindent_test.f90  indent_test.f90  is_infinity_test.f90  is_nan_test.f90  is_negative_test.f90  is_zero_test.f90  join_test.f90  main.f90  read_file_lines_test.f90  read_file_test.f90  readfile_test.f90  readfilelines_test.f90  split_at_test.f90  splitat_test.f90  starts_with_test.f90  startswith_test.f90  text_m.f90  to_string_test.f90
tests/: hangingindent_test.f90  indent_test.f90  join_test.f90  splitat_test.f90  strff_test.f90  tostring_test.f90
